--- a/docs/notebooks/ocl-local-setup-advanced.ipynb
+++ b/docs/notebooks/ocl-local-setup-advanced.ipynb
@@ -5,7 +5,7 @@
    "id": "4130dad7-6559-4c0f-bef3-67fbe817280b",
    "metadata": {},
    "source": [
-    "# Instructions to setup your local dev environment for OCL\n",
+    "# Advanced setup your local OCL dev environment\n",
     "These instructions walk you through setting up and running docker containers for the following projects:\n",
     "- `oclapi2` - [OCL Terminology Server](https://github.com/OpenConceptLab/oclapi2), the back-end that powers OCL and exposes the OCL API\n",
     "- `oclweb2` - [OCL TermBrowser v2](https://github.com/OpenConceptLab/oclweb2), a stable production version of a user interface to interact with the OCL terminology server\n",
