--- a/docs/notebooks/ocl-local-setup-advanced.ipynb
+++ b/docs/notebooks/ocl-local-setup-advanced.ipynb
@@ -27,7 +27,7 @@
     "7. Import content into local oclapi2 instance\n",
     "8. Validate that the content imported correctly\n",
     "9. Re-index and generate vector embeddings for imported content\n",
-    "10. Verify $match is working with semantic search\n",
+    "10. Verify [$match](https://docs.openconceptlab.org/en/latest/oclapi/apireference/match.html) is working with semantic search\n",
     "\n",
     "**Optional Steps**\n",
     "1. Change Language Model (LM) and rebuild index"
