--- a/docs/notebooks/ocl-local-setup-advanced.ipynb
+++ b/docs/notebooks/ocl-local-setup-advanced.ipynb
@@ -71,7 +71,10 @@
     "## 2. Build API and ElasticSearch services\n",
     "This step builds the `oclapi2` container. If using the `dev` branch, it will recreate the Python image that supports PyTorch and upgrade to ES8. You will need to start the Docker service on your local desktop. Double check that you are running Docker Engine v28 or higher.\n",
     "\n",
-    "If setting up on a mac, run the second command and comment out the first one:"
+    "If setting up on a mac, run the second command and comment out the first one.\n",
+    "\n",
+    "Validation steps:\n",
+    "- To validate `oclapi2` is running, open http://localhost:8000/ in a web browser"
    ]
   },
   {
